appId: net.citigo.kiotviet.manager
---
# - swipe:
#         start: 10%,50%
#         end: 90%,50%
# - tapOn: |-
#     chooclate cake
#     .*

- scrollUntilVisible:
    element:
      text: |-
        chooclate cake
        .*

- swipe:
    # from:
    #   text: |-
    #     chooclate cake
    #     .*
    start: 95%,30%
    end: 5%,30%
- tapOn: Xoá
# - tapOn: Xoá
